# urls

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: forms.py  models.py  views.py
app/static/: style.css
app/templates/: base.html  create.html  index.html  list.html  login.html
urls/: forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
urls/migrations/: 0001_initial.py  0002_auto_20231013_1449.py
urls/static/: style.css
urls/templates/: base.html  create.html  list.html  login.html
