[project]
name = "urls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "django==5.2.14",
    "requests==2.34.2",
    "dj-database-url==3.1.2",
    "psycopg2-binary==2.9.12",
    "gunicorn==26.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "django-stubs==5.2.*",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
    "types-requests>=2.33.0.20260518",
]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
exclude = [".venv/**", "urls/migrations/**"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
